@@ -1,7 +1,7 @@
 #  File src/library/base/R/LAPACK.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2013 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -87,3 +87,5 @@ La.svd <- function(x, nu = min(n, p), nv = min(n, p))
     }
     ## not reached
 }
+
+La_version <- function() .Internal(La_version())
