@@ -12,7 +12,7 @@ endif
 
 CSOURCES = Lapack.c
 OBJS=$(CSOURCES:.c=.o) dllversion.o
-LIBSOURCES = dlamch.f dlapack.f cmplx.f
+LIBSOURCES = dlamch.f dlapack.f cmplx.f ilaver.f
 LIBOBJECTS = $(LIBSOURCES:.f=.o) init_win.o Rlapackrc.o
 
 CPPFLAGS=-I../../include -DHAVE_CONFIG_H
